SourceModulePath pattern language.